Chamber of Commerce v3.9 - Fixed alignment of grid and flex layout for businesses

--- a/chamber/styles/chamber-small.css
+++ b/chamber/styles/chamber-small.css
@@ -24,6 +24,8 @@
         align-items: center;
         align-content: center;
         justify-content: center;
+        margin: 0;
+        padding: 0;
     }
 
     #menu {
@@ -188,7 +190,7 @@
         justify-content: space-between;
         align-content: center;
         align-items: center;
-        margin: 0 auto;
+        margin: 0;
         max-width: 100vw;
         /* width: 100%; */
     }
@@ -246,7 +248,7 @@
 
 /* Mobile view 2 */
 
-@media (max-width: 330px) {
+@media (max-width: 230px) {
 
     .nav-links-wrapper>img {
         width: 30px;
@@ -270,6 +272,8 @@
         align-items: center;
         align-content: center;
         justify-content: center;
+        margin: 0;
+        padding: 0;
     }
 
     #menu {
@@ -331,7 +335,7 @@
         justify-content: space-between;
         align-content: center;
         align-items: center;
-        margin: 0 auto;
+        margin: 0;
         max-width: 100vw;
 
     }
